Fix some layout issues, refs 333

--- a/src/app/events/components/tests-header/tests-header.component.scss
+++ b/src/app/events/components/tests-header/tests-header.component.scss
@@ -10,5 +10,13 @@
 }
 
 .header {
+  padding-bottom: $spacer;
   border-bottom: 1px solid $gray-200;
+  margin-bottom: $spacer;
+}
+
+@media (max-width: 750px) {
+  .header {
+    padding-right: $spacer;
+  }
 }
